# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cairn maintainers and contributors

[package]
name = "cairn-simplex-adapter"
version = "0.1.0-dev"
description = "Cairn project-owned Rust SMP client + Cairn message envelope per D0026"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Gated network integration tests against a local SMP server harness
# or a public SMP relay. Disabled by default so CI doesn't depend on
# external network availability per D0026 §12.
integration-tests = []

[dev-dependencies]
rand_core = { workspace = true }
# `net` (TcpListener) for the hermetic mock SimpleX-sidecar WebSocket server
# the ws-core transport tests dial — mirrors the mock-SOCKS5 / mock-control-
# port harnesses in cairn-tor-transport. The server side reuses
# tokio-tungstenite via ws-core's `tokio_tungstenite` re-export.
tokio = { workspace = true, features = ["net"] }
# Stream/Sink extension traits (`.next()` / `.send()`) to drive the mock
# server's WebSocketStream. Dev-only; already in the lockfile via
# simploxide-ws-core, so this adds no new crate to the graph. Pinned exact
# for lockfile determinism per D0018.
futures = "=0.3.32"
# Identity + storage construction for the live `integration-tests` harness
# (tests/live_simplex.rs) — building a LocalIdentity (device SigningKey) +
# in-memory Storage to drive a real two-party envelope round-trip against
# running simplex-chat CLI daemons. Dev-only; gated behind the feature.
cairn-crypto = { path = "../cairn-crypto" }
cairn-storage = { path = "../cairn-storage" }
zeroize = { workspace = true }

[dependencies]
# === Foundational primitives ===
cairn-crypto = { path = "../cairn-crypto" }
cairn-envelope = { path = "../cairn-envelope" }
cairn-storage = { path = "../cairn-storage" }
cairn-trust-graph = { path = "../cairn-trust-graph" }

# === RetryBudget reuse per D0026 §7.1 + D0023 §5.3 ===
cairn-sigsum-client = { path = "../cairn-sigsum-client" }
# Note: this crate does NOT depend on cairn-tor-transport. Per the
# D0020 re-anchor (D0026 §8), the SimpleX Chat CLI sidecar owns its
# own Tor routing through the shared C-Tor proxy; Cairn-Rust talks to
# the sidecar over loopback WebSocket and does not open raw Tor
# streams for SimpleX traffic.

# === SimpleX raw-WS sidecar client per D0026 §1.3 ===
# The low-level `simploxide-ws-core` (raw command/event WS client to the
# SimpleX Chat CLI sidecar), NOT the high-level `simploxide-client` Bot SDK
# — see the workspace-pin rationale + the D0026 §12 probe matrix.
# `connect("ws://host:port")` + RawClient::send + the EventQueue back the
# concrete `SimploxideTransport`; Cairn owns the command/JSON layer.
simploxide-ws-core = { workspace = true }

# === simplex-chat JSON command/response/event boundary (D0026 §1.3) ===
# serde_json ONLY at the SimpleX integration boundary — Cairn's own
# on-the-wire format is canonical CBOR (the envelope, §2). The simplex-chat
# sidecar speaks JSON command/response/event frames over the loopback WS,
# which `protocol.rs` constructs + parses (the "Cairn owns the command/JSON
# layer" cost of the lean ws-core path). Mirrors D0023 §2.3's boundary-only
# serde use; the trust-path wire format stays canonical CBOR.
serde = { workspace = true }
serde_json = { workspace = true }

# === SHA-256 for record-ids + prior_envelope_hash per D0026 §2-§3 ===
sha2 = { workspace = true }

# === CBOR for the envelope schema (D0026 §2) ===
ciborium = { workspace = true }

# === CSPRNG for padding bytes per D0026 §4 + D0018 §1.7 ===
getrandom = { workspace = true }

# === Async runtime (D0026 §7) ===
tokio = { workspace = true }

# === Memory hygiene (D0018 §1.6) ===
zeroize = { workspace = true }

# === Error handling (D0018 §4.2) ===
thiserror = { workspace = true }

# === Diagnostic logging facade (D0026 §12 on-device observability) ===
# The `log` facade is a no-op without an installed backend, so the host /
# ws-core paths + unit tests stay silent; on Android the cairn-uniffi shell
# installs a logcat backend (a minimal `log::Log` over `__android_log_write`,
# no new crate) so the SMP command/event flow is visible in logcat.
log = { workspace = true }

# === Android in-process FFI transport per D0026 §12 (ANDROID ONLY) ===
# `simploxide-ffi-core` exposes the SAME raw command/response/event String API
# as `simploxide-ws-core`, so the `FfiSidecarTransport` (sidecar.rs, gated
# `#[cfg(target_os = "android")]`) reuses Cairn's `protocol.rs` + the shared
# transport `flow` verbatim — only the bring-up differs (in-process `init`
# with an app-private DB vs. a WebSocket dial). target_os-gated so the x86_64
# CI host never pulls `simploxide-sxcrt-sys` (`links = "simplex"`), whose build
# script hard-fails without a `libsimplex` bundle. See the workspace-pin note.
[target.'cfg(target_os = "android")'.dependencies]
simploxide-ffi-core = { workspace = true }

# cargo-machete false positives / intentional deps:
# used via #[derive(Serialize/Deserialize)] (machete misses derive-only use)
[package.metadata.cargo-machete]
ignored = ["serde"]
