# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cairn maintainers and contributors

[package]
name = "cairn-tor-transport"
version = "0.1.0-dev"
description = "Cairn Tor transport: Arti-embedded client + pluggable-transports architecture per D0025"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Gated network integration tests against the public Tor network.
# Disabled by default so CI doesn't depend on external network
# availability per D0025 §10.
integration-tests = []

[dev-dependencies]

[dependencies]
# === RetryBudget + RetryBudget-paired discipline reuse per D0025 §5.1 ===
cairn-sigsum-client = { path = "../cairn-sigsum-client" }

# === Async runtime (D0025 §5) ===
tokio = { workspace = true }

# === Serde + TOML for the bridge manifest (D0025 §3 / D0020 §2.4) ===
serde = { workspace = true }
toml = { workspace = true }

# === Error handling (D0018 §4.2) ===
thiserror = { workspace = true }

# The SOCKS5 client + control-port protocol client will be added when
# the C-Tor integration body lands per D0025 §10 (re-anchored under
# D0020 §2: this crate is the Rust-side SOCKS5 + control-port client
# of the C-Tor ForegroundService, NOT an embedded Tor implementation).
# The v1 skeleton's transport methods return
# TorTransportError::NetworkUnreached without opening any connection,
# so the pin is deferred to keep the skeleton's dep surface minimal.
# Note: this crate does NOT pin arti-client (the original D0025 error);
# arti is deferred per D0020 §2.7's gating events.
