# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cairn maintainers and contributors

[package]
name = "cairn-tor-transport"
version = "0.1.0-dev"
description = "Cairn Tor transport: Rust-side SOCKS5 + control-port client of the C-Tor ForegroundService per D0025 / D0020 §2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Gated network integration tests against the public Tor network.
# Disabled by default so CI doesn't depend on external network
# availability per D0025 §10.
integration-tests = []

[dev-dependencies]

[dependencies]
# === RetryBudget + RetryBudget-paired discipline reuse per D0025 §5.1 ===
cairn-sigsum-client = { path = "../cairn-sigsum-client" }

# === Async runtime (D0025 §5) ===
# `net` (TcpStream) + `io-util` (AsyncReadExt/AsyncWriteExt) are added on
# top of the workspace tokio features for the hand-rolled SOCKS5 client
# per D0025 §2 / §10.
tokio = { workspace = true, features = ["net", "io-util"] }

# === Serde + TOML for the bridge manifest (D0025 §3 / D0020 §2.4) ===
serde = { workspace = true }
toml = { workspace = true }

# === SHA-256 for the per-conversation IsolateSOCKSAuth credential ===
# username/password = hex(SHA-256(conversation_id)) per D0020 §2.6, so the
# (possibly sensitive) conversation_id never reaches the proxy SOCKS-auth
# log. Reuses the existing workspace pin — NOT a new pin/coordination
# event per D0018 §1.
sha2 = { workspace = true }

# === Error handling (D0018 §4.2) ===
thiserror = { workspace = true }

# SOCKS5 client: HAND-ROLLED in src/socks5.rs (RFC 1928 CONNECT + RFC 1929
# username/password auth), NOT a third-party crate. D0025 §10's "it pins a
# SOCKS5 client" is revised 2026-05-31: the protocol is small +
# pure-safe-Rust, we need explicit username/password control for
# IsolateSOCKSAuth, and hand-rolling is hermetically testable via a mock
# SOCKS5 server with no new dependency-pin/audit event. The control-port
# protocol client (cookie auth + SIGNAL NEWNYM + bootstrap-status) is the
# remaining follow-up.
# Note: this crate does NOT pin arti-client (the original D0025 error);
# arti is deferred per D0020 §2.7's gating events.
