# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cairn maintainers and contributors

[package]
publish = false  # internal application crate; not for crates.io
name = "cairn-trust-graph"
version = "0.1.0-dev"
description = "Cairn trust-graph operation envelopes (attestation / revocation / re-attestation) per D0006 §2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# === Foundational primitives ===
cairn-crypto = { path = "../cairn-crypto" }
cairn-envelope = { path = "../cairn-envelope" }
cairn-identity = { path = "../cairn-identity" }
# === Persistent storage substrate per D0022 ===
cairn-storage = { path = "../cairn-storage" }

# === CBOR (D0018 §2.1) — used for decoding op payload bytes ===
ciborium = { workspace = true }

# === SHA-256 for prior_hash construction per D0006 §5 ===
sha2 = { workspace = true }

# === Memory hygiene (D0018 §1.6) ===
zeroize = { workspace = true }

# === Error handling (D0018 §4.2) ===
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex-literal = { workspace = true }
rand_core = { workspace = true }
