# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cairn maintainers and contributors

[package]
name = "cairn-uniffi"
version = "0.1.0-dev"
description = "Cairn FFI boundary crate: the curated Kotlin-facing surface per D0027 (downstream of D0020 §3)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

# cdylib produces the libcairn_uniffi.so that ships in the APK + that
# uniffi-bindgen reads to generate the Kotlin bindings (D0020 §3.10).
# `lib` (rlib) keeps the crate usable as a normal Rust dependency for
# the uniffi-bindgen bin + the host test build.
[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
# UniFFI binding surface per D0027 §8. When enabled, pulls uniffi
# 0.31.1 (the D0020 §3.11 pin) + applies the #[uniffi::export] /
# #[derive(uniffi::Error)] / callback_interface macros + the
# setup_scaffolding entrypoint. Disabled by default so the pure-Rust
# error facade + NeverExport gate + trait declarations compile + test
# WITHOUT the uniffi dep tree. The workspace gate runs --all-features,
# which exercises this path.
uniffi-bindings = ["dep:uniffi"]

[dependencies]
# === The NeverExport sealed marker (D0020 §3.7) lives in cairn-crypto ===
cairn-crypto = { path = "../cairn-crypto" }

# === The typed-error sources the CairnFfiError facade maps from per
#     D0027 §3. The flat type-tag mapping discards source payloads so no
#     source Display string crosses the boundary (no-error-oracle per
#     D0018 §4.2). cairn-identity (IdentityError) joined as a DIRECT
#     source when the identity export module landed (D0027 §2.2 revision
#     2026-06-01) — it also supplies the SignedCapabilityToken verify
#     path the module exports. ===
cairn-identity = { path = "../cairn-identity" }
cairn-storage = { path = "../cairn-storage" }
cairn-trust-graph = { path = "../cairn-trust-graph" }
cairn-sigsum-client = { path = "../cairn-sigsum-client" }
cairn-sigstore-verify = { path = "../cairn-sigstore-verify" }
cairn-tor-transport = { path = "../cairn-tor-transport" }
cairn-simplex-adapter = { path = "../cairn-simplex-adapter" }
# cairn-recovery (RecoveryError) is the EIGHTH facade source, added with
# the recovery export module (D0027 §2.2). It also supplies
# reconstruct_and_attest + SignedMasterAttestation.
cairn-recovery = { path = "../cairn-recovery" }

# === Shamir share/commitment types the recovery module rehydrates from
#     bytes (Share / Commitment); ShamirError reaches the facade wrapped
#     in RecoveryError, not directly. ===
cairn-shamir = { path = "../cairn-shamir" }

# === Memory hygiene (D0018 §1.6): the recovery module wraps incoming
#     share bytes in Zeroizing before handing them to Share::try_from_parts
#     so Rust's only copy is wiped on drop. ===
zeroize = { workspace = true }

# === Error Display (Cairn-authored strings only; no source Display
#     crosses) per D0018 §4.2 ===
thiserror = { workspace = true }

# === UniFFI boundary surface per D0020 §3 + D0027, behind the
#     uniffi-bindings feature. Optional so the default build stays
#     uniffi-free; the workspace --all-features gate exercises it. ===
uniffi = { workspace = true, optional = true }

# The uniffi-bindgen entrypoint (src/bin/uniffi-bindgen.rs) generates
# the Kotlin bindings from the compiled library; it is gated on the
# same feature.

[dev-dependencies]
# The per-domain export tests construct REAL signed inputs (capability
# tokens + signed trust-graph ops) to exercise the verify+marshal path
# the Kotlin shell will drive — mirroring cairn-trust-graph's own
# signed-op test fixture. The token/op builders come from cairn-identity
# + cairn-trust-graph (already normal deps); rand_core (OsRng) mints the
# ephemeral test keys.
rand_core = { workspace = true }
